# cvr_ab_testing_example

./: .gitignore  .mypy.ini  LICENSE  Makefile  PIPELINE.md  README.md  dvc.yaml  params.yaml  pyproject.toml
data/raw/: observed_real.csv
docs/: Makefile  conf.py  index.rst  make.bat
reports/figures/real/: dag
src/: analysis.py  ui.py  ui_texts.py  utils.py
src/data/: make_dataset.py  simulate_observed.py
src/models/: base.py  sampling.py
src/visualization/: visualize.py
