[tool.poetry]
name = "cvr_ab_testing_example"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pymc = "^5.4.1"
scipy = "^1.10.1"
japanize-matplotlib = "^1.1.3"
mlflow = "^2.4.1"
graphviz = "^0.20.1"

[tool.poetry.dev-dependencies]
dvc = "^2.58.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 79
py_version = "py310"

[[tool.pysen.lint.mypy_targets]]
  paths = ["src"]

[tool.pysen.lint.source]
  includes = ["src"]
