[tool.poetry]
name = "cvr_ab_testing_example"
version = "0.1.0"
description = ""
authors = ["u-masao <4973920+u-masao@users.noreply.github.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pymc = "^5.4.1"
scipy = "^1.10.1"
japanize-matplotlib = "^1.1.3"
mlflow = "^2.4.1"
graphviz = "^0.20.1"
gradio = "^5.42.0"
dvc = "^2.58.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
